Add a reference to the build example in the README file.

--- a/README
+++ b/README
@@ -4,5 +4,8 @@ and install information.  That document is based on the "pdf" version
 of the Build and Install Guide that is available in the Files download 
 area for this OpenSpeedShop release on sourceforge.
 
-Both documents have valid Open|SpeedShop-2.3 release information.
+Both documents have valid Open|SpeedShop-2.3 release information, but the
+format is better in the pdf.
+
+See the laptop_build.sh file for an example of a typical laptop/cluster build.
 
